--- a/helix-adl-tools.cabal
+++ b/helix-adl-tools.cabal
@@ -21,6 +21,7 @@ executable hx-adl
                      , adl-runtime
                      , adl-utils
                      , adl-compiler-lib
+                     , adl-compiler
                      , base64-bytestring >= 1.0.0.1 && < 1.1
                      , bytestring >= 0.10.8.1 && < 0.11
                      , cases >= 0.1.3.2 && < 0.2
@@ -31,6 +32,7 @@ executable hx-adl
                      , mtl >= 2.2.1 && < 2.3
                      , process >= 1.4.3 && < 1.5
                      , scientific >= 0.3.4.10 && < 0.4
+                     , transformers >= 0.5.2 && < 0.6
                      , text >= 1.2 && < 1.3
                      , unordered-containers >= 0.2.7.2 && < 0.3
                      , vector >= 0.11.0.0 && < 0.12
@@ -45,6 +47,7 @@ library
                      , adl-runtime
                      , adl-utils
                      , adl-compiler-lib
+                     , adl-compiler
                      , base64-bytestring >= 1.0.0.1 && < 1.1
                      , bytestring >= 0.10.8.1 && < 0.11
                      , cases >= 0.1.3.2 && < 0.2
@@ -55,5 +58,6 @@ library
                      , process >= 1.4.3 && < 1.5
                      , scientific >= 0.3.4.10 && < 0.4
                      , text >= 1.2 && < 1.3
+                     , transformers >= 0.5.2 && < 0.6
                      , unordered-containers >= 0.2.7.2 && < 0.3
                      , vector >= 0.11.0.0 && < 0.12
