--- a/helix-adl-tools.cabal
+++ b/helix-adl-tools.cabal
@@ -16,18 +16,19 @@ extra-source-files:  README.md
 executable hx-adl
   hs-source-dirs:      src
   main-is:             Main.hs
+  default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0.2.1 && < 1.3
                      , adl-runtime
                      , adl-utils
                      , adl-compiler-lib
                      , adl-compiler
+                     , helix-adl-tools
                      , base64-bytestring >= 1.0.0.1 && < 1.1
                      , bytestring >= 0.10.8.1 && < 0.11
                      , cases >= 0.1.3.2 && < 0.2
                      , containers >= 0.5.7.1 && < 0.6
                      , directory >= 1.3 && < 1.4
-                     , helix-adl-tools >= 0.1 && < 0.2
                      , filepath >= 1.4 && < 1.5
                      , mtl >= 2.2.1 && < 2.3
                      , process >= 1.4.3 && < 1.7
@@ -41,6 +42,7 @@ library
   exposed-modules:     ADL.Sql.Schema
                      , ADL.Sql.SchemaUtils
                      , ADL.Sql.JavaTables
+                     , ADL.Http.JavaReqs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0.2.1 && < 1.3
