--- a/stack.yaml
+++ b/stack.yaml
@@ -4,7 +4,7 @@ packages:
 - location: .
 - location:
     git: git@github.com:timbod7/adl.git
-    commit: 8844fc2346f606e912d56d44a177e3fb5ca0d59d
+    commit: 0.9.1
   subdirs:
   - haskell/utils
   - haskell/runtime
