--- a/haskell/hx-adl/helix-adl-tools.cabal
+++ b/haskell/hx-adl/helix-adl-tools.cabal
@@ -11,9 +11,8 @@ copyright:           2017 Tim Docker
 category:            Database
 build-type:          Simple
 cabal-version:       >=1.10
-extra-source-files:  README.md
 
-executable hx-adl
+executable hx-adl-hs
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
