--- a/stack.yaml
+++ b/stack.yaml
@@ -4,7 +4,7 @@ packages:
 - location: .
 - location:
     git: git@github.com:timbod7/adl.git
-    commit: 0.9.4
+    commit: 8d9f939c7af957ac62ac6b4bd2fde1e680c4e4a4
   subdirs:
   - haskell/utils
   - haskell/runtime
