--- a/typescript/hx-adl/package.json
+++ b/typescript/hx-adl/package.json
@@ -12,6 +12,7 @@
     "base64-js": "^1.3.0",
     "change-case": "^3.1.0",
     "commander": "^2.20.0",
+    "mkdirp": "^0.5.1",
     "tmp": "^0.1.0",
     "typescript": "^2.9.2"
   },
@@ -31,6 +32,7 @@
     "@types/commander": "^2.12.2",
     "@types/jest": "23.3.13",
     "@types/lodash": "^4.14.110",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "^10.5.2",
     "@types/tmp": "^0.1.0",
     "jest": "^23.6.0",
