--- a/typescript/hx-adl/package.json
+++ b/typescript/hx-adl/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aws-sdk": "^2.427.0",
     "base64-js": "^1.3.0",
+    "change-case": "^3.1.0",
     "commander": "^2.20.0",
     "mkdirp": "^0.5.1",
     "tmp": "^0.1.0",
