--- a/haskell/hx-adl/helix-adl-tools.cabal
+++ b/haskell/hx-adl/helix-adl-tools.cabal
@@ -25,7 +25,6 @@ executable hx-adl-hs
                      , helix-adl-tools
                      , base64-bytestring >= 1.0.0.1 && < 1.1
                      , bytestring >= 0.10.8.1 && < 0.11
-                     , cases >= 0.1.3.2 && < 0.2
                      , containers >= 0.5.7.1 && < 0.7
                      , directory >= 1.3 && < 1.4
                      , filepath >= 1.4 && < 1.5
@@ -44,6 +43,7 @@ library
                      , ADL.Http.JavaReqs
                      , ADL.Http.TypescriptReqs
                      , ADL.Http.Utils
+                     , Utils
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0.2.1 && < 1.5
@@ -53,7 +53,6 @@ library
                      , adl-compiler
                      , base64-bytestring >= 1.0.0.1 && < 1.1
                      , bytestring >= 0.10.8.1 && < 0.11
-                     , cases >= 0.1.3.2 && < 0.2
                      , containers >= 0.5.7.1 && < 0.7
                      , directory >= 1.3 && < 1.4
                      , filepath >= 1.4 && < 1.5
