--- a/typescript/hx-adl/package.json
+++ b/typescript/hx-adl/package.json
@@ -31,6 +31,7 @@
     "@types/change-case": "^2.3.1",
     "@types/commander": "^2.12.2",
     "@types/jest": "23.3.13",
+    "@types/js-yaml": "^3.12.2",
     "@types/lodash": "^4.14.110",
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^10.5.2",
