--- a/typescript/hx-adl/package.json
+++ b/typescript/hx-adl/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "qwilr-analytics",
+  "name": "hx-adl",
   "version": "0.1",
-  "description": "Core analytics engine for qwilr",
+  "description": "helix specific adl processors",
   "main": "index.js",
   "repository": "",
   "author": "Tim Docker",
@@ -13,6 +13,7 @@
     "change-case": "^3.1.0",
     "commander": "^2.20.0",
     "mkdirp": "^0.5.1",
+    "mustache": "^4.0.0",
     "tmp": "^0.1.0",
     "typescript": "^3.7.5"
   },
@@ -34,6 +35,7 @@
     "@types/js-yaml": "^3.12.2",
     "@types/lodash": "^4.14.110",
     "@types/mkdirp": "^0.5.2",
+    "@types/mustache": "^4.0.1",
     "@types/node": "^10.5.2",
     "@types/tmp": "^0.1.0",
     "jest": "^23.6.0",
