--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-
 
-      - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@master
+      - name: Checkout submodule
+        run: "git submodule update --init"
 
       - uses: actions/setup-python@v1
       - uses: BSFishy/pip-action@v1
