--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,10 @@ jobs:
       - name: RegenAdl
         run: "doit genadl"
 
+      - name: Set up node using nvm
+        uses: dcodeIO/setup-node-nvm@v3.0.0
+        with:
+          node-version: 11
+
       - name: Build
         run: "doit docker_build_hxadl_image"
