--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,11 @@ on:
 jobs:
   build:
     name: CI
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, macos-latest]
+
     steps:
       - name: Setup Stack
         uses: mstksg/setup-stack@v1
@@ -17,6 +21,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      # Fetch all history so git describe works
+      - run: |
+          git fetch --prune --unshallow
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -39,6 +47,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-
 
+      - uses: actions/setup-python@v1
+      - uses: BSFishy/pip-action@v1
+        with:
+          packages: |
+            doit
+            pystache
+
       - name: Build core adl and run tests
         run: "cd haskell && stack build --fast adl-compiler && stack test --fast --no-terminal adl-compiler"
 
@@ -47,3 +62,6 @@ jobs:
 
       - name: Build hx-adl typescript
         run: "cd typescript/hx-adl && rm -rf build && yarn && yarn build"
+
+      - name: Test Release Build
+        run: "doit build_release"
