--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,17 +34,17 @@ jobs:
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ matrix.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ matrix.os }}-yarn-
 
       - name: Cache haskell dependencies
         uses: actions/cache@v1
         with:
           path: ~/.stack
-          key: ${{ runner.os }}-2-${{ hashFiles('haskell/stack.yaml') }}
+          key: ${{ matrix.os }}-${{ hashFiles('haskell/stack.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-2-
+            ${{ matrix.os }}-
 
       - uses: actions/setup-python@v1
       - uses: BSFishy/pip-action@v1
