--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Setup Stack
-        uses: mstksg/setup-stack@v1
+        uses: timbod7/setup-stack@61acd0e
 
       - name: Clone project
         uses: actions/checkout@v2
