--- a/typescript/hx-adl/package.json
+++ b/typescript/hx-adl/package.json
@@ -12,6 +12,7 @@
     "base64-js": "^1.3.0",
     "change-case": "^3.1.0",
     "commander": "^2.20.0",
+    "fs-extra": "^9.0.1",
     "mkdirp": "^0.5.1",
     "mustache": "^4.0.0",
     "tmp": "^0.1.0",
@@ -30,13 +31,13 @@
   "devDependencies": {
     "@types/base64-js": "^1.2.5",
     "@types/change-case": "^2.3.1",
-    "@types/commander": "^2.12.2",
+    "@types/fs-extra": "^9.0.2",
     "@types/jest": "23.3.13",
     "@types/js-yaml": "^3.12.2",
     "@types/lodash": "^4.14.110",
     "@types/mkdirp": "^0.5.2",
     "@types/mustache": "^4.0.1",
-    "@types/node": "^10.5.2",
+    "@types/node": "12",
     "@types/tmp": "^0.1.0",
     "jest": "^23.6.0",
     "lodash": "^4.17.19",
